# GlobeQuiz

./: .gitmodules  README.md  build.gradle  gradlew  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/shnoop/globequiz/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: capitals.points.jet  game_data.json  game_data_de.json  game_data_en.json  land_boundaries.lines.jet  languages.json  languages_data.json  long_lat_lines.lines.jet  strings_de.json  strings_en.json
app/src/main/assets/shader/: line_fragment_shader.glsl  line_vertex_shader.glsl  point_fragment_shader.glsl  point_vertex_shader.glsl  rectangle_fragment_shader.glsl  rectangle_relief_fragment_shader.glsl  rectangle_relief_vertex_shader.glsl  rectangle_vertex_shader.glsl  triangle_fragment_shader.glsl  triangle_relief_fragment_shader.glsl  triangle_vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  Globe.cpp  Globe.h  GlobeRenderer.cpp  GlobeRenderer.h  globe-lib.cpp  globe-lib.h  log.h
app/src/main/cpp/assets/: AssetBuffer.h  AssetFile.h  AssetGeometry.h  AssetLineList.cpp  AssetLineList.h  AssetLineShader.cpp  AssetLineShader.h  AssetManager.cpp  AssetManager.h  AssetPointList.cpp  AssetPointList.h  AssetPointShader.cpp  AssetPointShader.h  AssetShader.h  AssetTexture.h  AssetTexture2d.cpp  AssetTexture2d.h  AssetTriangleList.cpp  AssetTriangleList.h  AssetTriangleShader.cpp  AssetTriangleShader.h  AssetTriangleShaderRelief.cpp  AssetTriangleShaderRelief.h
app/src/main/cpp/objects/: Rectangle.cpp  Rectangle.h
app/src/main/cpp/shaders/: GlobeRectangleShaderProgram.cpp  GlobeRectangleShaderProgram.h  GlobeRectangleShaderProgramRelief.cpp  GlobeRectangleShaderProgramRelief.h  LineShaderProgram.cpp  LineShaderProgram.h  PointShaderProgram.cpp  PointShaderProgram.h  ShaderProgram.cpp  ShaderProgram.h  TriangleShaderProgram.cpp  TriangleShaderProgram.h  TriangleShaderProgramRelief.cpp  TriangleShaderProgramRelief.h
app/src/main/cpp/utilities/: Color.h  CubeMap.cpp  CubeMap.h  CubeMapCamera.cpp  CubeMapCamera.h  Image.h  ImagePng.cpp  ImagePng.h  Interpolator.h  RenderTarget.cpp  RenderTarget.h  Timer.h
app/src/main/java/com/shnoop/globequiz/: GameState.java  MainActivity.java  RendererWrapper.java
app/src/main/java/com/shnoop/globequiz/customadapters/: AchievementsAdapter.java  AchievementsListItem.java  CountriesAdapter.java  LanguagesAdapter.java  LicenseListItem.java  LicensesAdapter.java  PlayersAdapter.java  PlayersListItem.java  QuestionListItem.java  QuestionsAdapter.java
app/src/main/java/com/shnoop/globequiz/fragments/: FragmentAbout.java  FragmentAchievement.java  FragmentAchievementsList.java  FragmentGlobe.java  FragmentHappyBunny.java  FragmentLicense.java  FragmentMainMenu.java  FragmentPlayerCreate.java  FragmentPlayerSelect.java  FragmentQuestion.java  FragmentQuestionFindArea.java  FragmentQuestionSelectValue.java  FragmentScore.java  FragmentSettings.java  FragmentStartGame.java
app/src/main/java/com/shnoop/globequiz/gamedata/: Achievement.java  AchievementCondition.java  AchievementManager.java  Country.java  GameData.java  Language.java  Question.java  QuestionFindArea.java  QuestionManager.java  QuestionSelectValue.java  QuestionType.java  Region.java  ShowType.java
app/src/main/java/com/shnoop/globequiz/player/: Player.java  PlayerManager.java
app/src/main/res/drawable/: button_background.xml  button_background_correct.xml  button_background_wrong.xml  button_text_color.xml  fragment_background.xml  ic_public_black_24dp.xml
app/src/main/res/layout/: achievement_item.xml  activity_main.xml  country_item.xml  fragment_about.xml  fragment_achievement.xml  fragment_achievements_list.xml  fragment_globe.xml  fragment_happy_bunny.xml  fragment_main_menu.xml  fragment_player_create.xml  fragment_player_select.xml  fragment_question_find_area.xml  fragment_question_select_value.xml  fragment_score.xml  fragment_settings.xml  fragment_start_game.xml  language_item.xml  license_item.xml  players_item.xml  question_item.xml
app/src/main/res/values/: colors.xml  ids.xml  strings.xml
app/src/main/res/values-de/: strings.xml
app/src/test/java/com/shnoop/globequiz/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
